chore: switch postgres to supabase

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-# Copy to .env and adjust credentials for your Postgres instance
-DATABASE_URL="postgresql://USERNAME:PASSWORD@localhost:5432/ganxing?schema=public"
+# Copy to .env.local and fill in the Supabase credentials from the project settings.
+
+# Connection pooling endpoint (use Supabase's POSTGRES_PRISMA_URL value).
+DATABASE_URL="postgres://postgres.<project-ref>:<password>@aws-1-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&pgbouncer=true"
+
+# Direct endpoint for Prisma migrations (Supabase POSTGRES_URL_NON_POOLING).
+DIRECT_DATABASE_URL="postgres://postgres.<project-ref>:<password>@aws-1-us-east-1.pooler.supabase.com:5432/postgres?sslmode=require"
+
 DEEPSEEK_API_KEY="your-deepseek-api-key"
