--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "api/inspections/pdf.ts": {
-      "runtime": "nodejs18.x",
+    "app/api/inspections/pdf/route.ts": {
+      "runtime": "nodejs20.x",
       "maxDuration": 60,
       "includeFiles": "node_modules/@sparticuz/chromium/**/*"
     }
