fix: pass chromium env to puppeteer on vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,3 @@
 {
-  "version": 2,
-  "functions": {
-    "app/api/inspections/pdf/route.ts": {
-      "runtime": "nodejs20.x",
-      "maxDuration": 60,
-      "includeFiles": "node_modules/@sparticuz/chromium/**/*"
-    }
-  }
+  "version": 2
 }
