chore: target node18 for vercel pdf function and harden chromium launch

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-  "version": 2
+  "version": 2,
+  "functions": {
+    "app/api/inspections/pdf/route.ts": {
+      "runtime": "nodejs18.x",
+      "maxDuration": 60,
+      "includeFiles": "node_modules/@sparticuz/chromium/**/*"
+    }
+  }
 }
