--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "daily-work",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18 <19"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
