--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   },
   "dependencies": {
     "@antv/g2plot": "^2.4.35",
-    "@sparticuz/chromium": "^123.0.1",
     "next": "13.5.4",
-    "puppeteer-core": "^23.10.4",
+    "puppeteer": "^24.32.1",
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1"
