--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:webpack": "next dev",
     "dev:turbo": "next dev --turbo",
     "build": "prisma generate && next build --webpack",
-    "start": "next start -p 3001",
+    "start": "next start",
     "lint": "next lint",
     "test:deepseek": "tsx tests/deepseekSmoke.ts"
   },
