--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:turbo": "next dev --turbo",
     "build": "prisma generate && next build --webpack",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "ESLINT_USE_FLAT_CONFIG=true eslint .",
     "test:deepseek": "tsx tests/deepseekSmoke.ts"
   },
   "dependencies": {
