feat(members): import/export, filters, pagination / feat(members): 成员导入导出、筛选分页
EN:

- add XLSX export + template with instructions; role column gated by role:manage

- add import API + client validation; support ignore-error rows

- add reusable searchable multi-select filters; all fields covered with date buckets

- add multi-column sorting + clear sort; pagination with size options + jump

- enforce role:manage on role visibility/assignment (UI + API)

中文：

- 增加 XLSX 导出与模板下载（含说明页）；角色列受 role:manage 限制

- 增加导入接口与前端校验，支持忽略错误行继续导入

- 增加可复用可搜索多选筛选组件，覆盖全部字段与日期月份分桶

- 增加多列排序/清空排序；分页含每页数量与跳页

- UI 与 API 端同步限制角色可见/可绑定权限

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "19.3.0-canary-b061b597-20251212",
     "react-dom": "19.3.0-canary-b061b597-20251212",
     "react-liquid-gauge": "^1.2.4",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@prisma/client": "^6.19.0",
