--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "d3-scale": "^4.0.2",
     "next": "16.1.0-canary.20",
+    "pdf-lib": "^1.17.1",
     "puppeteer": "^24.32.1",
     "react": "19.3.0-canary-b061b597-20251212",
     "react-dom": "19.3.0-canary-b061b597-20251212",
