--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:deepseek": "tsx tests/deepseekSmoke.ts"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "d3-scale": "^4.0.2",
     "next": "16.1.0-canary.20",
     "pdf-lib": "^1.17.1",
