feat(files): add image preview processing and enrich file links / 支持图片预览处理并增强文件关联能力
EN:
- Add image processing pipeline with preview generation using sharp
- Store and expose preview storage key, mime type, and size for FileAsset
- Prefer preview URL when opening or displaying image files
- Ensure preview objects are cleaned up on file/signature deletion
- Extend FileLink to support meta field and persist JSON safely via Prisma
- Improve file upload UX for photo categories with camera and album options
- Support BOQ item linking with searchable selector and rich meta labels
- Refactor MultiSelectFilter to support controlled search input
- Add site-photo category and unify photo category handling
- Fix project code naming from danda to tanda across data, UI, and seeds
- Sync API responses, frontend types, schema docs, i18n, and seed data

ZH:
- 引入基于 sharp 的图片处理流程，自动生成预览图
- 为 FileAsset 增加并返回预览图的存储键、类型和大小
- 打开和展示图片文件时优先使用预览图 URL
- 删除文件或签名时同步清理对应的预览对象
- 扩展 FileLink 支持 meta 字段，并通过 Prisma 安全存储 JSON
- 针对照片类文件优化上传体验，支持拍照与相册选择
- 支持文件绑定工程量清单（BOQ Item），提供搜索选择与富标签展示
- 重构 MultiSelectFilter，支持受控搜索输入
- 新增 site-photo 分类，统一照片类分类处理
- 修正项目编码命名（danda → tanda），保持数据与展示一致
- 同步更新 API、前端类型、数据结构文档、多语言文案及种子数据

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.3.0-canary-b061b597-20251212",
     "react-dom": "19.3.0-canary-b061b597-20251212",
     "react-liquid-gauge": "^1.2.4",
+    "sharp": "^0.34.4",
     "server-only": "^0.0.1",
     "xlsx": "^0.18.5"
   },
